various fixes for AgentX protocol decoding
This issue was migrated from bug 5438 in our old bug tracker.
Original bug information:
Reporter: Fulko Hew
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
agentx.diff: patches for various AgentX decode issues
agentx.diff2: additional patch to allow dissection of varbind list attached to response PDU
agentx_test.pcap: a capture for seeing specified scenarios